# Homework3

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/calculator/: __init__.py  app.py  operations.py  parsing.py
tests/: test_app.py  test_operations.py  test_parsing.py
