[project]
name = "calculator-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-q",
  "--cov=calculator",
  "--cov-report=term-missing",
  "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true
source = ["calculator"]
